Fix again nav and hero alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,18 +51,21 @@ a {
   color: #f9faf8;
 }
 
+.hero {
+  background-color: #1f2937;
+}
+
 .hero-container {
   display: flex;
   /* flex-wrap: wrap; */
   color: white;
-  background-color: #1f2937;
   padding: 6rem 2rem;
-  margin: 0;
+  margin: 0 auto;
   gap: 2rem;
   justify-content: center;
   align-items: center;
   width: 100%;
-  /* max-width: 1000px; */
+  max-width: 1000px;
 }
 
 .hero-main-text {
@@ -92,8 +95,7 @@ a {
   background-color: gray;
   padding: 5rem;
   align-items: center;
-  justify-content: center;
-  
+  justify-content: center;  
 }
 
 button {
